2-parsers/src/maths_parser.output
Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR

    2 EXPR: EXPR T_MINUS TERM
    3     | EXPR T_PLUS TERM
    4     | TERM

    5 TERM: TERM T_TIMES VAL
    6     | TERM T_DIVIDE VAL
    7     | VAL

    8 VAL: UNARY T_EXPONENT VAL
    9    | UNARY

   10 UNARY: T_MINUS FACTOR
   11      | FACTOR

   12 FACTOR: T_LBRACKET EXPR T_RBRACKET
   13       | T_NUMBER
   14       | T_VARIABLE
   15       | FUNCTION_NAME T_LBRACKET EXPR T_RBRACKET

   16 FUNCTION_NAME: T_LOG
   17              | T_EXP
   18              | T_SQRT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_TIMES (258) 5
    T_DIVIDE (259) 6
    T_PLUS (260) 3
    T_MINUS (261) 2 10
    T_EXPONENT (262) 8
    T_LBRACKET (263) 12 15
    T_RBRACKET (264) 12 15
    T_LOG <string> (265) 16
    T_EXP <string> (266) 17
    T_SQRT <string> (267) 18
    T_NUMBER <number> (268) 13
    T_VARIABLE <string> (269) 14


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    ROOT (16)
        on left: 1
        on right: 0
    EXPR <expr> (17)
        on left: 2 3 4
        on right: 1 2 3 12 15
    TERM <expr> (18)
        on left: 5 6 7
        on right: 2 3 4 5 6
    VAL <expr> (19)
        on left: 8 9
        on right: 5 6 7 8
    UNARY <expr> (20)
        on left: 10 11
        on right: 8 9
    FACTOR <expr> (21)
        on left: 12 13 14 15
        on right: 10 11
    FUNCTION_NAME <string> (22)
        on left: 16 17 18
        on right: 15


State 0

    0 $accept: . ROOT $end

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    ROOT           go to state 8
    EXPR           go to state 9
    TERM           go to state 10
    VAL            go to state 11
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 1

   10 UNARY: T_MINUS . FACTOR

    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    FACTOR         go to state 15
    FUNCTION_NAME  go to state 14


State 2

   12 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR           go to state 16
    TERM           go to state 10
    VAL            go to state 11
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 3

   16 FUNCTION_NAME: T_LOG .

    $default  reduce using rule 16 (FUNCTION_NAME)


State 4

   17 FUNCTION_NAME: T_EXP .

    $default  reduce using rule 17 (FUNCTION_NAME)


State 5

   18 FUNCTION_NAME: T_SQRT .

    $default  reduce using rule 18 (FUNCTION_NAME)


State 6

   13 FACTOR: T_NUMBER .

    $default  reduce using rule 13 (FACTOR)


State 7

   14 FACTOR: T_VARIABLE .

    $default  reduce using rule 14 (FACTOR)


State 8

    0 $accept: ROOT . $end

    $end  shift, and go to state 17


State 9

    1 ROOT: EXPR .
    2 EXPR: EXPR . T_MINUS TERM
    3     | EXPR . T_PLUS TERM

    T_PLUS   shift, and go to state 18
    T_MINUS  shift, and go to state 19

    $default  reduce using rule 1 (ROOT)


State 10

    4 EXPR: TERM .
    5 TERM: TERM . T_TIMES VAL
    6     | TERM . T_DIVIDE VAL

    T_TIMES   shift, and go to state 20
    T_DIVIDE  shift, and go to state 21

    $default  reduce using rule 4 (EXPR)


State 11

    7 TERM: VAL .

    $default  reduce using rule 7 (TERM)


State 12

    8 VAL: UNARY . T_EXPONENT VAL
    9    | UNARY .

    T_EXPONENT  shift, and go to state 22

    $default  reduce using rule 9 (VAL)


State 13

   11 UNARY: FACTOR .

    $default  reduce using rule 11 (UNARY)


State 14

   15 FACTOR: FUNCTION_NAME . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 23


State 15

   10 UNARY: T_MINUS FACTOR .

    $default  reduce using rule 10 (UNARY)


State 16

    2 EXPR: EXPR . T_MINUS TERM
    3     | EXPR . T_PLUS TERM
   12 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 18
    T_MINUS     shift, and go to state 19
    T_RBRACKET  shift, and go to state 24


State 17

    0 $accept: ROOT $end .

    $default  accept


State 18

    3 EXPR: EXPR T_PLUS . TERM

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    TERM           go to state 25
    VAL            go to state 11
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 19

    2 EXPR: EXPR T_MINUS . TERM

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    TERM           go to state 26
    VAL            go to state 11
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 20

    5 TERM: TERM T_TIMES . VAL

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    VAL            go to state 27
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 21

    6 TERM: TERM T_DIVIDE . VAL

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    VAL            go to state 28
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 22

    8 VAL: UNARY T_EXPONENT . VAL

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    VAL            go to state 29
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 23

   15 FACTOR: FUNCTION_NAME T_LBRACKET . EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR           go to state 30
    TERM           go to state 10
    VAL            go to state 11
    UNARY          go to state 12
    FACTOR         go to state 13
    FUNCTION_NAME  go to state 14


State 24

   12 FACTOR: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 12 (FACTOR)


State 25

    3 EXPR: EXPR T_PLUS TERM .
    5 TERM: TERM . T_TIMES VAL
    6     | TERM . T_DIVIDE VAL

    T_TIMES   shift, and go to state 20
    T_DIVIDE  shift, and go to state 21

    $default  reduce using rule 3 (EXPR)


State 26

    2 EXPR: EXPR T_MINUS TERM .
    5 TERM: TERM . T_TIMES VAL
    6     | TERM . T_DIVIDE VAL

    T_TIMES   shift, and go to state 20
    T_DIVIDE  shift, and go to state 21

    $default  reduce using rule 2 (EXPR)


State 27

    5 TERM: TERM T_TIMES VAL .

    $default  reduce using rule 5 (TERM)


State 28

    6 TERM: TERM T_DIVIDE VAL .

    $default  reduce using rule 6 (TERM)


State 29

    8 VAL: UNARY T_EXPONENT VAL .

    $default  reduce using rule 8 (VAL)


State 30

    2 EXPR: EXPR . T_MINUS TERM
    3     | EXPR . T_PLUS TERM
   15 FACTOR: FUNCTION_NAME T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 18
    T_MINUS     shift, and go to state 19
    T_RBRACKET  shift, and go to state 31


State 31

   15 FACTOR: FUNCTION_NAME T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 15 (FACTOR)
